Corrections : rendre le footer visible uniquement aux pages extrêmes effet de transition plus léger nettoyage des titres

--- a/css/jenkins-theme.css
+++ b/css/jenkins-theme.css
@@ -8,6 +8,13 @@ html.background-structure .reveal:not(.overview) .backgrounds {
     filter: saturate(.3) brightness(.3);
 }
 
+/*.reveal h2 {
+    color: #f07d00;
+}*/
+
+.reveal h2 {
+    color: #f07d00;
+}
 
 html.background-contest .reveal:not(.overview) .backgrounds {
     background-color: #222;
